# felix_s_useful_cpp_libraries

./: README.md
.github/jobs/: module-test.ps1  module-test.sh  text-module.sh
.github/workflows/: compile-and-test.yml
cmake/: FindBoost.cmake
jobs/: text-module.sh
packs/: common.cmake  system_detect.cmake
packs/binary/: CMakeLists.txt  README.md
packs/binary/src/: binary.cpp  binary.hpp
packs/binary/test/: binary_test.cpp
packs/cpu/: CMakeLists.txt  README.md
packs/cpu/src/: arithmetic.cpp  arithmetic.hpp  prefetch.cpp  prefetch.hpp
packs/cpu/test/: cpu_test.cpp
packs/files/: CMakeLists.txt  README.md
packs/files/src/: files.cpp  files.hpp
packs/files/test/: files_test.cpp
packs/geometry/: CMakeLists.txt  README.md
packs/geometry/src/: elements.cpp  elements.hpp  geometry.cpp  geometry.hpp  transform.cpp  transform.hpp
packs/geometry/test/: geometry_test.cpp  other_test.cpp  transform_test.cpp
packs/macros/: README.md
packs/macros/src/: attrs.hpp  compiler_detect.hpp  disable_diag.hpp  os_detect.hpp
packs/math_utils/: CMakeLists.txt  README.md
packs/math_utils/src/: angle.cpp  angle.hpp  gcd_lcm.cpp  gcd_lcm.hpp  math_utils.cpp  math_utils.hpp  mod.hpp  numbers.cpp  numbers.hpp  ranges_calc.cpp  ranges_calc.hpp
packs/math_utils/test/: math_utils_test.cpp
packs/misc/: CMakeLists.txt  README.md
packs/misc/src/: defer.cpp  defer.hpp
packs/misc/test/: misc_test.cpp
packs/primitives/: CMakeLists.txt  README.md
packs/primitives/src/: primitives.cpp  primitives.hpp
packs/primitives/test/: primitives_test.cpp
packs/system/: CMakeLists.txt  README.md
packs/system/src/: enable_fast_GPU.hpp  info.cpp  info.hpp  memory.cpp  memory.hpp  recycle.cpp  recycle.hpp
packs/system/test/: os_test.cpp
packs/text/: CMakeLists.txt  README.md  conanfile.txt
packs/text/src/: case.cpp  case.hpp  checks.cpp  checks.hpp  convert.cpp  convert.hpp  db.hpp  join.hpp  just.cpp  just.hpp  split.cpp  split.hpp  trim.cpp  trim.hpp  unicode.hpp
packs/text/src/ascii/: case.cpp  case.hpp  checks.cpp  checks.hpp  trim.cpp  trim.hpp
packs/text/src/utf32/: case.cpp  case.hpp  checks.cpp  checks.hpp  trim.cpp  trim.hpp
packs/text/src/utf8/: case.cpp  case.hpp  checks.cpp  checks.hpp  iter.cpp  iter.hpp  trim.cpp  trim.hpp
packs/text/test/: text_utils_test.cpp
